# neobit

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  benchmark_output.txt  clippy.toml  deny.toml  neobit-rfc-v4.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml  security.yml  verification.yml
examples/: all_method.rs  bit_validation.rs  c_ffi.rs  c_ffi_simple.rs  complement_difference.rs  composite_flags.rs  const_operations.rs  hardware_register.rs  integer_types.rs  limitations.rs  network_protocol.rs  operators_and_methods.rs  permissions.rs  quick_start.rs  type_conversion.rs  validation.rs
src/: lib.rs
tests/: all_method.rs  basic.rs  basic_permissions.rs  const_context.rs  debug_format.rs  features.rs  flags.rs  from_into.rs  hygiene.rs  kani_proofs.rs  libc_integration.rs  signed_types.rs  traits.rs  u128_i128.rs
