[package]
name = "neobit"
version = "1.0.2"
edition = "2021"
rust-version = "1.56"
license = "MIT OR Apache-2.0"
description = "Zero-dependency, lightweight bitflags with readable debug output"
keywords = ["bitflags", "flags", "bits", "no-std", "lightweight"]
categories = ["no-std", "data-structures"]
repository = "https://github.com/but212/neobit"
documentation = "https://docs.rs/neobit"
readme = "README.md"

[features]
default = []
